# agentful

./: .gitignore  README.md  chainlit.md  main.py  pyproject.toml
config/: agents.yaml
src/: app.py
src/a2a/agents/da_agent/: __main__.py  adapter.py  card.py  executor.py
src/a2a/base/: agent_base.py  executor_base.py  response_format.py  server_factory.py
src/agents/da_agent/: graph.py
src/mcp/client/: master_mcp_client.py
src/mcp/server/math/: server.py
