[project]
name = "local-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.11.1",
    "deepagents==0.5.3",
    "dotenv==0.9.9",
    "fastmcp==3.2.4",
    "langchain-mcp-adapters==0.2.2",
    "langchain-ollama==1.1.0",
    "langgraph==1.1.9",
    # A2A protocol
    "a2a-sdk>=0.3.0",
    "uvicorn>=0.34.0",
    "starlette>=0.46.0",
    "click>=8.1.0",
    "pyyaml>=6.0.0",
]
